# qt-chronos-7

./: CMakeLists.txt  ChronosDisplay.qmlproject  ChronosDisplay.qmlproject.qtds  ChronosDisplay.qrc  README.md
ClientUi/: AlarmRow.qml  AuditLine.qml  ChronosPanel.qml  ChronosPanelHeader.qml  ChronosTokens.qml  CommandToast.qml  DriftHistogram.qml  FleetStatusCard.qml  GatewayStatusCard.qml  MinuteDial.qml  SeverityTag.qml  SignalBars.qml  SiteRow.qml  StatusLed.qml  qmldir
ClientUiContent/: AlarmsScreen.qml  AlarmsScreenForm.ui.qml  App.qml  AuditScreen.qml  AuditScreenForm.ui.qml  ChronosDashboard.qml  ChronosDashboardForm.ui.qml  ChronosStore.qml  GatewayStub.qml  ModbusLteScreen.qml  ModbusLteScreenForm.ui.qml  OverviewScreen.qml  OverviewScreenForm.ui.qml  SiteFleetScreen.qml  SiteFleetScreenForm.ui.qml
docs/: INTEGRATION.md
src/: main.cpp
